@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.189 2005/11/26 05:19:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.190 2005/11/26 21:29:48 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  move partition debug button to top row so it's always visible
+  add bit about installer version to failure message
+  spread out filesystem types in key
 
   25 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   show mountpoint in partition summary on main screen
